--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
 			<center>
   			<input type="submit" name="submit" value="submit">
   			</center>
-        <a href="/registration">Registration</a>
+        <!-- <a href="/registration">Registration</a> -->
         <!-- <center>
         <a href="/templates/reg.html">Register</a>
         
