--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,12 @@
 	<form method="POST">
 		<center>
 			<table>
-				<tr><h1>login form</h1></tr>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<tr><h1>LOGIN </h1></tr>
 				<tr>
     				<td>Enter username:</td>
     				<td><input type="text" name="username"></td>
@@ -17,7 +22,9 @@
 			</table>
 		
 			<center>
-  			<input type="submit" name="submit" value="submit">
+				<br>
+				<br>
+  				<input type="submit" name="submit" value="submit">
   			</center>
         <!-- <a href="/registration">Registration</a> -->
         <!-- <center>
