--- a/templates/ctrlpanel.html
+++ b/templates/ctrlpanel.html
@@ -18,13 +18,13 @@
 				
 				
           			<tr>
-            			<td>BUTTON 1<input type="checkbox" name="button1" id="btn1" value="on" onclick='changeState()'></td>
-            			<td>BUTTON 2<input type="checkbox" name="button2" id="btn2"></td>    
+            			<td>BUTTON 1<input type="checkbox" name="button1" id="btn1" value="on" onclick='changeState(id)'></td>
+            			<td>BUTTON 2<input type="checkbox" name="button2" id="btn2" value="on" onclick='changeState(id)'></td>    
           			</tr>
 
           			<tr>
-            			<td>BUTTON 3<input type="checkbox" name="button3" id="btn3"></td>
-            			<td>BUTTON 4<input type="checkbox" name="button4" id="btn4"></td>    
+            			<td>BUTTON 3<input type="checkbox" name="button3" id="btn3" value="on" onclick='changeState(id)'></td>
+            			<td>BUTTON 4<input type="checkbox" name="button4" id="btn4" value="on" onclick='changeState(id)'></td>    
           			</tr>
   				
             
@@ -34,36 +34,192 @@
 			</center>
 
 			<script>
-				var states = ["ON","OFF"], // your possible states
-                        current_state = 0; // your flag
 
-							function changeState() 
+				var btn1_status
+				var btn2_status
+				var btn3_status
+				var btn4_status
+				var btn_status
+				
+
+				window.onload = function () 
+								{
+    								checkonoff("D5");
+									checkonoff("D4");
+									checkonoff("D0");
+									checkonoff("D2");
+									//button_status_startup();
+									//console.log("Entered the window onload");
+								};
+
+
+							
+							auth_code = "4LrnMs0PkPlgyC6GDKrzBJYLdDZDjmfi";
+
+							function changeState(btn) 
 							{
+								
+							var states = ["ON","OFF"], // your possible states
+                        	current_state = 0; // your flag
                               current_state=!current_state; // switch
-							  document.getElementById('btn1').value=states[current_state?1:0]; // write your state
+							  document.getElementById(btn).value=states[current_state?1:0]; // write your state
 								//   window.alert("value changed to "+current_state);
 
 							  if(current_state==1)
 							  {
+								//document.getElementById('btn1').checked = true;
 								window.alert("value changed to ON");
-								httpGet(theUrl);
+								//httpGet(theUrl);
 							  }
 
 							  else if(current_state==0)
 							  {
+								//document.getElementById('btn1').checked = false;
 								window.alert("value changed to OFF");
-								httpGet(theUrl);
+								//httpGet(theUrl);
 							  }
 							}
+
 							
 
-							function httpGet(theUrl)
+							function debugg()
+							{	
+								console.log("Entered the debug function")
+								console.log("button D5 "+btn1_status)
+								console.log("button D4 "+btn2_status)
+								console.log("button D0 "+btn3_status)
+								console.log("button D2 "+btn4_status)
+								console.log(btn_status)
+								
+							}
+							
+							function checkonoff(pin_to_check)   //this function checks wheather the given pin is onn or off and also assign status to buttons
 							{
+								var request = new XMLHttpRequest()
+								var url = "http://blynk-cloud.com/"+auth_code+"/get/"+pin_to_check;
+								console.log(url)
+
+								request.open('GET', url, true)
+								request.onload = function() 
+								{
+  									// Begin accessing JSON data here
+  									var data = JSON.parse(this.response)
+
+ 									if (request.status >= 200 && request.status < 400) 
+									{
+										console.log(data)
+										
+										if(data == 1)
+										{
+											//window.alert("data value "+data);
+											console.log("PIN "+pin_to_check+" is off")
+											btn_status = 1;
+											
+										}
+
+										else if(data == 0)
+										{
+											console.log("PIN "+pin_to_check+" is on")
+											btn_status = 0;
+											
+										}
+										
+    									// data.forEach(movie => 
+										// {
+      									// 	console.log(movie.title)
+    									// })
+  									} 
+
+									else 
+									{
+    									console.log('error')
+ 									}
+									 //
+									 //console.log(request)
+									 console.log("btn_status inside the nested function: "+btn_status)
+									 //return btn_status;
+
+									//I DONT KNOW ANY ANOTHER METHOD PLEASE COORPORATE 
+									 if(pin_to_check == "D5")
+									 	{
+											btn1_status = btn_status;
+										}
+									else if(pin_to_check == "D4")
+										{
+											btn2_status = btn_status;
+										}
+									else if(pin_to_check == "D0")
+										{
+											btn3_status = btn_status;
+										}
+									else if(pin_to_check == "D2")
+										{
+											btn4_status = btn_status;
+										}
+									 
+
+									
+									 
+								}
+
+								
+								request.send()
+								
+								
+								//return 1;
+								
+								//console.log("btn_status outside the nested function: "+btn_status)
+								//return btn_status;
+								
+							}
+
+							//The setTimeout is used to allow the function to get executed  after some time otherwise the function will be executed
+							//immediately and values not assigning properly
+
+							setTimeout(function()  
+											{
+												console.log("Called the button_status_startup")
+												console.log("button D5 "+btn1_status)
+												console.log("button D4 "+btn2_status)
+												console.log("button D0 "+btn3_status)
+												console.log("button D2 "+btn4_status)
+												if(btn1_status == 0)
+												{
+													document.getElementById('btn1').checked = true;
+												}
+												if(btn2_status == 0)
+												{
+													document.getElementById('btn2').checked = true;
+												}
+												if(btn3_status == 0)
+												{
+													document.getElementById('btn3').checked = true;
+												}
+												if(btn4_status == 0)
+												{
+													document.getElementById('btn4').checked = true;
+												}
+
+											},250);	
+							
+
+							function pin_on(pin)
+							{
+								var url = "http://blynk-cloud.com/"+auth_code+"/update/"+pin+"?value=0";
    								var xmlHttp = new XMLHttpRequest();
-    							xmlHttp.open( "GET", theUrl, false ); // false for synchronous request
+    							xmlHttp.open( "GET", url, false ); // false for synchronous request
     							xmlHttp.send( null );
     							return xmlHttp.responseText;
-							}			
+							}	
+
+							function pin_off(pin)
+							{
+								var url = "http://blynk-cloud.com/"+auth_code+"/update/"+pin+"?value=1";
+   								var xmlHttp = new XMLHttpRequest();
+    							xmlHttp.open( "GET", url, false ); // false for synchronous request
+    							xmlHttp.send( null );
+    							return xmlHttp.responseText;
+							}					
 			</script>
 
 		</form>	
