--- a/templates/adminhome.html
+++ b/templates/adminhome.html
@@ -1,8 +1,16 @@
 {% include 'adminheader.html' %}
+{% include 'cssstyle.html' %}
 	<title></title>
 
 </head>
 <body>
-	<h1>Welcome admin</h1>
+	<center>
+		<h1>WELCOME ADMIN</h1>
+		<br>
+		<br>
+		<a href="/add_user">ADD USER</a>
+		
+	</center>
+</body>
 
 {% include 'adminfooter.html' %}
