--- a/templates/ctrlpanel.html
+++ b/templates/ctrlpanel.html
@@ -1,15 +1,115 @@
+{% include 'publicheader.html' %}
 <!DOCTYPE html>
 <html>
 	<head>
 		<title>SMART SWITCH CONTROL PANEL</title>
+		
+
+		<style>
+
+					body
+					{
+						background-color:#182026;
+						/* background-color: rgb(7, 30, 92); */
+						/* color: white; */
+					}
+
+					h3
+					{
+						color: white;
+						font-family: myFirstFont;
+					}
+
+					h1
+					{
+						color: white;
+						font-family: myFirstFont;
+					}
+
+					table{ 
+						border-collapse:separate; 
+						border-spacing: 0 50px; 
+					} 
+					
+					th,td{ 
+						width: 200px; 
+						text-align: center; 
+						/* border: 1px solid black;  */
+						padding: 20px;
+					}
+
+					/* The switch - the box around the slider */
+					.switch {
+						position: relative;
+						display: inline-block;
+						width: 60px;
+						height: 34px;
+					}
+					
+					/* Hide default HTML checkbox */
+					.switch input {
+						opacity: 0;
+						width: 0;
+						height: 0;
+					}
+					
+					/* The slider */
+					.slider {
+						position: absolute;
+						cursor: pointer;
+						top: 0;
+						left: 0;
+						right: 0;
+						bottom: 0;
+						background-color: #ccc;
+						-webkit-transition: .4s;
+						transition: .4s;
+					}
+					
+					.slider:before {
+						position: absolute;
+						content: "";
+						height: 26px;
+						width: 26px;
+						left: 4px;
+						bottom: 4px;
+						background-color: white;
+						-webkit-transition: .4s;
+						transition: .4s;
+					}
+					
+					input:checked + .slider {
+						background-color: rgb(75, 204, 75);
+					}
+					
+					input:focus + .slider {
+						box-shadow: 0 0 1px #2196F3;
+					}
+					
+					input:checked + .slider:before {
+						-webkit-transform: translateX(26px);
+						-ms-transform: translateX(26px);
+						transform: translateX(26px);
+					}
+					
+					/* Rounded sliders */
+					.slider.round {
+						border-radius: 34px;
+					}
+					
+					.slider.round:before {
+						border-radius: 50%;
+					}
+		
+		</style>
+
 	</head>
 
 	<body>
 		<center>
 			<h1>SMART SWITCH CONTROL PANEL</h1>
 		</center>
-		<br>
-		<br>
+		
 		<br>
 		<form method="POST" enctype="multipart/form-data">
 			<center>
@@ -17,7 +117,7 @@
 				<table>
 				
 				
-          			<tr>
+          			<!-- <tr>
             			<td>BUTTON 1<input type="checkbox" name="button1" id="btn1" value="on" onclick='changeState(id)'></td>
             			<td>BUTTON 2<input type="checkbox" name="button2" id="btn2" value="on" onclick='changeState(id)'></td>    
           			</tr>
@@ -25,11 +125,50 @@
           			<tr>
             			<td>BUTTON 3<input type="checkbox" name="button3" id="btn3" value="on" onclick='changeState(id)'></td>
             			<td>BUTTON 4<input type="checkbox" name="button4" id="btn4" value="on" onclick='changeState(id)'></td>    
-          			</tr>
+					</tr> -->
+					  
+					<tr>
+						<td><h3>Button 1</h3>
+							<label class="switch">
+								<input type="checkbox" name="button1" id="btn1" value="on" onclick='changeState(id)'>
+								<span class="slider round"></span>
+							</label>
+						</td> 
+
+						<td><h3>Button 2</h3>
+							<label class="switch">
+								<input type="checkbox" name="button2" id="btn2" value="on" onclick='changeState(id)'>
+								<span class="slider round"></span>
+							</label>
+						</td> 
+
+					</tr>
+
+					
+
+					<tr>
+						<td><h3>Button 3</h3>
+							<label class="switch">
+								<input type="checkbox" name="button3" id="btn3" value="on" onclick='changeState(id)'>
+								<span class="slider round"></span>
+							</label>
+						</td> 
+
+
+						<td><h3>Button 4</h3>
+							<label class="switch">
+								<input type="checkbox" name="button4" id="btn4" value="on" onclick='changeState(id)'>
+								<span class="slider round"></span>
+							</label>
+						</td> 
+
+					</tr>
   				
             
   				
 				</table>
+
+				
 
 			</center>
 
