--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,25 @@
+<style>
+	
+	body
+		{
+			background-color:#182026;
+			/* background-color: rgb(7, 30, 92); */
+			/* color: white; */
+		}
+
+	h3
+		{
+			color: white;
+			font-family: myFirstFont;
+		}
+
+	h1
+		{
+			color: white;
+			font-family: myFirstFont;
+		}	
+
+</style>
 
 	<form method="POST">
 		<center>
@@ -9,13 +31,13 @@
 				<br>
 				<tr><h1>LOGIN </h1></tr>
 				<tr>
-    				<td>Enter username:</td>
-    				<td><input type="text" name="username"></td>
+    				<td><h3>Enter username:</h3></td>
+    				<td><input required="" type="text" name="username"></td>
     				
   				</tr>
   				<tr>
-  					<td>Enter password:</td>
-    				<td><input type="password" name="password"></td>
+  					<td><h3>Enter password:</h3></td>
+    				<td><input required="" type="password" name="password"></td>
     				
   				</tr>
   				
