--- a/templates/publicheader.html
+++ b/templates/publicheader.html
@@ -1,7 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {box-sizing: border-box;}
+
+body { 
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  /* background-color: #5c7080; */
+}
+
+.header {
+  overflow: hidden;
+  background-color: #5c7080;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: rgba(168, 139, 139, 0.603);
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }
+}
+</style>
 </head>
-<!-- <a href="view">employees</a> -->
-<a href="viewproduct">product</a>
+<body>
+
+<div class="header">
+  <!-- <a href="#default" class="logo">CompanyLogo</a> -->
+  <div class="header-right">
+    <a href="/controlpanel">HOME</a> 
+	<a href="/automatic_on_off">AUTOMATIC ON/OFF</a>
+	<a href="/logout">LOGOUT</a>
+    <!-- <a href="#about">About</a> -->
+  </div>
+</div>
+
+
+</body>
+</html>
