--- a/templates/adminhome.html
+++ b/templates/adminhome.html
@@ -8,7 +8,10 @@
 		<h1>WELCOME ADMIN</h1>
 		<br>
 		<br>
-		<a href="/add_user">ADD USER</a>
+		<a href="/admin/add_user">ADD USER</a>
+		<br>
+		<br>
+		<a href="/admin/delete_user">DELETE USER</a>
 		
 	</center>
 </body>
