--- a/templates/adminheader.html
+++ b/templates/adminheader.html
@@ -65,8 +65,10 @@ body {
 <div class="header">
   <!-- <a href="#default" class="logo">CompanyLogo</a> -->
   <div class="header-right">
-    <!-- <a class="active" href="#home">Home</a> -->
+    <a href="/controlpanel">CONTROL PANEL</a>
+    <a href="/admin/home">HOME</a>
     <a href="/logout">LOGOUT</a>
+    
     <!-- <a href="#about">About</a> -->
   </div>
 </div>
